# Launcher-studio-indie

./: .gitignore  DETAILED_IMPROVEMENTS.md  IMPROVEMENT_SPECS.md  MANIFEST_R2_GUIDE.md  README-vi.md  README.md  README_EN.md  manifest.json  package-lock.json  package.json
.github/agents/: agent.agent.md
src/: App.css  App.tsx  PanelMain.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BackgroundLayer.tsx  DownloadBar.tsx  DownloadStatusPill.tsx  FeaturedCarousel.tsx  GameDetails.tsx  GameLibrary.tsx  GameSwitcher.tsx  Header.tsx  HeroSection.tsx  LauncherActionArea.tsx  LauncherNewsPanel.tsx  MainHeroArt.tsx  NewsPanel.tsx  NewsSection.tsx  PanelIconGame.tsx  PanelMain.tsx  RightInfoPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SidebarNav.tsx  TopBar.tsx  TrailerCard.tsx
src/hooks/: useDownloadQueue.ts  useDownloader.ts  useGameManager.ts  useNews.ts
src/types/: index.ts
