[package]
name = "antchill-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "antchill-launcher"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "antchill-launcher"
path = "src/main.rs"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-all", "path-all", "fs-all", "shell-execute", "dialog-all", "http-all", "system-tray", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
winreg = "0.52"
futures-util = "0.3"
sha2 = "0.10"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
